add jar for java start in pom